主分支变成gradle版本